--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,11 @@
 #                       by Kamesuta                       #
 ###########################################################
 
+# Language
+# Supported languages: en, ja
+# You can add your own language file in the plugins/BungeePteroPower directory.
+language: en
+
 # When no one enters the server after starting the server,
 # the server will be stopped after this time has elapsed according to the autostop setting.
 noPlayerTimeoutTime: 120
