Refactor PterodactylAPI and Config classes

--- a/src/main/resources/messages_ja.yml
+++ b/src/main/resources/messages_ja.yml
@@ -1,24 +1,23 @@
 prefix: "[Ptero] "
 
-join_autostart: "サーバーを起動中..."
+join_autostart: "休止中のサーバー「%s」を起動中..."
 join_autostart_warning: "なお、起動したサーバー「%s」にプレイヤーが入らないまま放置されますと、サーバーリソース削減のため%s秒後に再度停止されますのでご注意ください。"
 join_autostart_title: "サーバーを起動中..."
 join_autostart_subtitle: "しばらく待ってから再接続してください。"
 join_start: "サーバー「%s」はサーバーリソースを節約するために休止中ですが、下のボタンをクリックすると起動できます。"
 join_start_button: "[サーバー「%s」を起動]"
 join_start_button_tooltip: "クリックしてサーバー「%s」を起動！"
+join_failed_start: "サーバー「%s」の起動に失敗しました"
 
 leave_server_stopping: "あなたはサーバー「%s」の最後のプレイヤーです。サーバーリソース削減のため、%s秒後にサーバーを停止します。"
 
 ptero_usage: "/ptero <start|stop|reload> の形式で入力してください"
-insufficient_permission: "権限が不足しています。"
-config_reloaded: "設定が再読み込みされました。"
 ptero_start_usage: "/ptero start <server> の形式で入力してください"
 ptero_stop_usage: "/ptero stop <server> の形式で入力してください"
+insufficient_permission: "権限が不足しています。"
+config_reloaded: "設定が再読み込みされました。"
 server_not_configured: "サーバー「%s」は設定されていません。"
-server_start: "サーバー「%s」を起動中..."
+server_start: "サーバー「%s」を起動中... しばらく待ってから入り直してください。"
 server_stop: "サーバー「%s」を停止中..."
 failed_to_start_server: "サーバー「%s」の起動に失敗しました"
 failed_to_stop_server: "サーバー「%s」の停止に失敗しました"
-send_start_signal_to_server: "サーバー「%s」の起動を開始しました。しばらく待ってから入り直してください。"
-send_stop_signal_to_server: "サーバー「%s」の停止を開始しました。"
