--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -1,24 +1,23 @@
 prefix: "[Ptero] "
 
-join_autostart: "Starting the suspended server..."
+join_autostart: "Starting the suspended server %s..."
 join_autostart_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
 join_autostart_title: "Starting server..."
 join_autostart_subtitle: "Please wait a moment and try reconnecting."
 join_start: "The server %s is suspended to reduce server resources, but it can be started by clicking the button below."
 join_start_button: "[Start Server %s]"
 join_start_button_tooltip: "Click to start the server %s!"
+join_failed_start: "Failed to start server %s"
 
 leave_server_stopping: "You are the last player on server %s. The server will be stopped in %s seconds to reduce server resources."
 
 ptero_usage: "Usage: /ptero <start|stop|reload>"
-insufficient_permission: "Insufficient permission."
-config_reloaded: "Configuration reloaded."
 ptero_start_usage: "Usage: /ptero start <server>"
 ptero_stop_usage: "Usage: /ptero stop <server>"
+insufficient_permission: "Insufficient permission."
+config_reloaded: "Configuration reloaded."
 server_not_configured: "Server %s is not configured."
-server_start: "Starting server %s..."
+server_start: "Starting server %s... Please wait a while and then reconnect."
 server_stop: "Stopping server %s..."
 failed_to_start_server: "Failed to start server %s"
 failed_to_stop_server: "Failed to stop server %s"
-send_start_signal_to_server: "Started the startup of server %s. Please wait a while and then reconnect."
-send_stop_signal_to_server: "Started the shutdown of server %s."
