--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -11,13 +11,13 @@ join_failed_start: "Failed to start server %s"
 
 leave_server_stopping: "You are the last player on server %s. The server will be stopped in %s seconds to reduce server resources."
 
-ptero_usage: "Usage: /ptero <start|stop|reload>"
-ptero_start_usage: "Usage: /ptero start <server>"
-ptero_stop_usage: "Usage: /ptero stop <server>"
-insufficient_permission: "Insufficient permission."
-config_reloaded: "Configuration reloaded."
-server_not_configured: "Server %s is not configured."
-server_start: "Starting server %s... Please wait a while and then reconnect."
-server_stop: "Stopping server %s..."
-failed_to_start_server: "Failed to start server %s"
-failed_to_stop_server: "Failed to stop server %s"
+command_usage: "Usage: /ptero <start|stop|reload>"
+command_start_usage: "Usage: /ptero start <server>"
+command_stop_usage: "Usage: /ptero stop <server>"
+command_insufficient_permission: "Insufficient permission."
+command_config_reloaded: "Configuration reloaded."
+command_server_not_configured: "Server %s is not configured."
+command_server_start: "Starting server %s... Please wait a while and then reconnect."
+command_server_stop: "Stopping server %s..."
+command_failed_start: "Failed to start server %s"
+command_failed_stop: "Failed to stop server %s"
