--- a/src/main/resources/messages_ja.yml
+++ b/src/main/resources/messages_ja.yml
@@ -11,13 +11,13 @@ join_failed_start: "サーバー「%s」の起動に失敗しました"
 
 leave_server_stopping: "あなたはサーバー「%s」の最後のプレイヤーです。サーバーリソース削減のため、%s秒後にサーバーを停止します。"
 
-ptero_usage: "/ptero <start|stop|reload> の形式で入力してください"
-ptero_start_usage: "/ptero start <server> の形式で入力してください"
-ptero_stop_usage: "/ptero stop <server> の形式で入力してください"
-insufficient_permission: "権限が不足しています。"
-config_reloaded: "設定が再読み込みされました。"
-server_not_configured: "サーバー「%s」は設定されていません。"
-server_start: "サーバー「%s」を起動中... しばらく待ってから入り直してください。"
-server_stop: "サーバー「%s」を停止中..."
-failed_to_start_server: "サーバー「%s」の起動に失敗しました"
-failed_to_stop_server: "サーバー「%s」の停止に失敗しました"
+command_usage: "/ptero <start|stop|reload> の形式で入力してください"
+command_start_usage: "/ptero start <server> の形式で入力してください"
+command_stop_usage: "/ptero stop <server> の形式で入力してください"
+command_insufficient_permission: "権限が不足しています。"
+command_config_reloaded: "設定が再読み込みされました。"
+command_server_not_configured: "サーバー「%s」は設定されていません。"
+command_server_start: "サーバー「%s」を起動中... しばらく待ってから入り直してください。"
+command_server_stop: "サーバー「%s」を停止中..."
+command_failed_start: "サーバー「%s」の起動に失敗しました"
+command_failed_stop: "サーバー「%s」の停止に失敗しました"
