Add cascade translation, fix translation key

--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -18,6 +18,7 @@ command_insufficient_permission: "Insufficient permission."
 command_config_reloaded: "Configuration reloaded."
 command_server_not_configured: "Server %s is not configured."
 command_server_start: "Starting server %s... Please wait a while and then reconnect."
+command_server_start_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
 command_server_stop: "Stopping server %s..."
 command_failed_start: "Failed to start server %s"
 command_failed_stop: "Failed to stop server %s"
