--- a/src/main/resources/messages_ro.yml
+++ b/src/main/resources/messages_ro.yml
@@ -1,24 +1,24 @@
 prefix: "[Ptero] "
 
-join_autostart: "Starting the suspended server %s..."
-join_autostart_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
-join_autostart_title: "Starting server..."
-join_autostart_subtitle: "Please wait a moment and try reconnecting."
-join_start: "The server %s is suspended to reduce server resources, but it can be started by clicking the button below."
-join_start_button: "[Start Server %s]"
-join_start_button_tooltip: "Click to start the server %s!"
-join_failed_start: "Failed to start server %s"
+join_autostart: "Se pornește serverul suspendat %s..."
+join_autostart_warning: "Dacă serverul %s este lăsat nesupravegheat fără niciun jucător care să se alăture, acesta va fi oprit din nou în %s secunde pentru a reduce resursele serverului."
+join_autostart_title: "Se pornește serverul..."
+join_autostart_subtitle: "Vă rugăm să așteptați un moment și să încercați să vă reconectați."
+join_start: "Serverul %s este suspendat pentru a reduce resursele, dar poate fi pornit făcând clic pe butonul de mai jos."
+join_start_button: "[Pornește serverul %s]"
+join_start_button_tooltip: "Faceți clic pentru a porni serverul %s!"
+join_failed_start: "Nu s-a reușit pornirea serverului %s"
 
-leave_server_stopping: "You are the last player on server %s. The server will be stopped in %s seconds to reduce server resources."
+leave_server_stopping: "Ești ultimul jucător pe serverul %s. Serverul va fi oprit în %s secunde pentru a reduce resursele."
 
-command_usage: "Usage: /ptero <start|stop|reload>"
-command_start_usage: "Usage: /ptero start <server>"
-command_stop_usage: "Usage: /ptero stop <server>"
-command_insufficient_permission: "Insufficient permission."
-command_config_reloaded: "Configuration reloaded."
-command_server_not_configured: "Server %s is not configured."
-command_server_start: "Starting server %s... Please wait a while and then reconnect."
-command_server_start_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
-command_server_stop: "Stopping server %s..."
-command_failed_start: "Failed to start server %s"
-command_failed_stop: "Failed to stop server %s"
+command_usage: "Utilizare: /ptero <start|stop|reload>"
+command_start_usage: "Utilizare: /ptero start <server>"
+command_stop_usage: "Utilizare: /ptero stop <server>"
+command_insufficient_permission: "Permisiuni insuficiente."
+command_config_reloaded: "Configurația a fost reîncărcată."
+command_server_not_configured: "Serverul %s nu este configurat."
+command_server_start: "Se pornește serverul %s... Vă rugăm să așteptați un moment și să vă reconectați."
+command_server_start_warning: "Dacă serverul %s este lăsat nesupravegheat fără niciun jucător care să se alăture, acesta va fi oprit din nou în %s secunde pentru a reduce resursele serverului."
+command_server_stop: "Se oprește serverul %s..."
+command_failed_start: "Nu s-a reușit pornirea serverului %s"
+command_failed_stop: "Nu s-a reușit oprirea serverului %s"
