--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,10 @@
 #                       by Kamesuta                       #
 ###########################################################
 
+# Version of the configuration file
+# Do not edit this value until the "/ptero check" asks you to do so.
+version: 1
+
 # Language
 # Supported languages: en, ja, fr
 # You can add your own language file in the plugins/BungeePteroPower directory.
