Made startup join to be done at auto join time

--- a/src/main/resources/messages_fr.yml
+++ b/src/main/resources/messages_fr.yml
@@ -1,13 +1,10 @@
 prefix: "[Ptero] "
 
-join_autostart: "Démarrage du serveur suspendu %s..."
-join_autostart_warning: "Si le serveur %s est laissé sans surveillance sans qu'aucun joueur ne le rejoigne, il sera à nouveau arrêté dans %s secondes pour réduire les ressources du serveur."
 join_autostart_title: "Démarrage du serveur..."
 join_autostart_subtitle: "Veuillez patienter un moment et essayer de vous reconnecter."
 join_start: "Le serveur %s est suspendu pour réduire les ressources du serveur, mais il peut être démarré en cliquant sur le bouton ci-dessous."
 join_start_button: "[Démarrer le serveur %s]"
 join_start_button_tooltip: "Cliquez pour démarrer le serveur %s !"
-join_failed_start: "Échec du démarrage du serveur %s"
 
 leave_server_stopping: "Vous êtes le dernier joueur sur le serveur %s. Le serveur sera arrêté dans %s secondes pour réduire les ressources du serveur."
 
@@ -17,10 +14,11 @@ command_stop_usage: "Utilisation: /ptero stop <server>"
 command_insufficient_permission: "Permission insuffisante."
 command_config_reloaded: "Configuration reloaded."
 command_server_not_configured: "Le serveur %s n'est pas configuré."
-command_server_start: "Démarrage du serveur %s... Veuillez patienter un peu et vous reconnecter."
-command_server_start_warning: "Si le serveur %s est laissé sans surveillance sans qu'aucun joueur ne le rejoigne, il sera à nouveau arrêté dans %s secondes pour réduire les ressources du serveur."
-command_server_startup_join: "Démarrage du serveur %s... Veuillez patienter jusqu'à ce que vous soyez connecté après le démarrage."
-command_server_startup_join_warning: "Nous n'avons pas pu vous connecter au serveur %s."
-command_server_stop: "Arrêt du serveur %s..."
-command_failed_start: "Échec du démarrage du serveur %s"
-command_failed_stop: "Échec de l'arrêt du serveur %s"
+
+server_start: "Démarrage du serveur suspendu %s... Veuillez patienter un peu et vous reconnecter."
+server_start_warning: "Si le serveur %s est laissé sans surveillance sans qu'aucun joueur ne le rejoigne, il sera à nouveau arrêté dans %s secondes pour réduire les ressources du serveur."
+server_startup_join: "Démarrage du serveur %s... Veuillez patienter jusqu'à ce que vous soyez connecté après le démarrage."
+server_startup_join_warning: "Nous n'avons pas pu vous connecter au serveur %s."
+server_stop: "Arrêt du serveur %s..."
+server_failed_start: "Échec du démarrage du serveur %s"
+server_failed_stop: "Échec de l'arrêt du serveur %s"
