--- a/src/main/resources/messages_ja.yml
+++ b/src/main/resources/messages_ja.yml
@@ -1,13 +1,10 @@
 prefix: "[Ptero] "
 
-join_autostart: "休止中のサーバー「%s」を起動中..."
-join_autostart_warning: "なお、起動したサーバー「%s」にプレイヤーが入らないまま放置されますと、サーバーリソース削減のため%s秒後に再度停止されますのでご注意ください。"
 join_autostart_title: "サーバーを起動中..."
 join_autostart_subtitle: "しばらく待ってから再接続してください。"
 join_start: "サーバー「%s」はサーバーリソースを節約するために休止中ですが、下のボタンをクリックすると起動できます。"
 join_start_button: "[サーバー「%s」を起動]"
 join_start_button_tooltip: "クリックしてサーバー「%s」を起動！"
-join_failed_start: "サーバー「%s」の起動に失敗しました"
 
 leave_server_stopping: "あなたはサーバー「%s」の最後のプレイヤーです。サーバーリソース削減のため、%s秒後にサーバーを停止します。"
 
@@ -17,10 +14,11 @@ command_stop_usage: "/ptero stop <server> の形式で入力してください"
 command_insufficient_permission: "権限が不足しています。"
 command_config_reloaded: "設定が再読み込みされました。"
 command_server_not_configured: "サーバー「%s」は設定されていません。"
-command_server_start: "サーバー「%s」を起動中... しばらく待ってから入り直してください。"
-command_server_start_warning: "なお、起動したサーバー「%s」にプレイヤーが入らないまま放置されますと、サーバーリソース削減のため%s秒後に再度停止されますのでご注意ください。"
-command_server_startup_join: "サーバー 「%s」を開始しています... 起動後に接続されるのでお待ちください。"
-command_server_startup_join_warning: "サーバー 「%s」 に自動的に接続できませんでした。"
-command_server_stop: "サーバー「%s」を停止中..."
-command_failed_start: "サーバー「%s」の起動に失敗しました"
-command_failed_stop: "サーバー「%s」の停止に失敗しました"
+
+server_start: "休止中のサーバー「%s」を起動中... しばらく待ってから入り直してください。"
+server_start_warning: "なお、起動したサーバー「%s」にプレイヤーが入らないまま放置されますと、サーバーリソース削減のため%s秒後に再度停止されますのでご注意ください。"
+server_startup_join: "サーバー 「%s」を開始しています... 起動後に接続されるのでお待ちください。"
+server_startup_join_warning: "サーバー 「%s」 に自動的に接続できませんでした。"
+server_stop: "サーバー「%s」を停止中..."
+server_failed_start: "サーバー「%s」の起動に失敗しました"
+server_failed_stop: "サーバー「%s」の停止に失敗しました"
