--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -1,13 +1,10 @@
 prefix: "[Ptero] "
 
-join_autostart: "Starting the suspended server %s..."
-join_autostart_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
 join_autostart_title: "Starting server..."
 join_autostart_subtitle: "Please wait a moment and try reconnecting."
 join_start: "The server %s is suspended to reduce server resources, but it can be started by clicking the button below."
 join_start_button: "[Start Server %s]"
 join_start_button_tooltip: "Click to start the server %s!"
-join_failed_start: "Failed to start server %s"
 
 leave_server_stopping: "You are the last player on server %s. The server will be stopped in %s seconds to reduce server resources."
 
@@ -17,10 +14,11 @@ command_stop_usage: "Usage: /ptero stop <server>"
 command_insufficient_permission: "Insufficient permission."
 command_config_reloaded: "Configuration reloaded."
 command_server_not_configured: "Server %s is not configured."
-command_server_start: "Starting server %s... Please wait a while and then reconnect."
-command_server_start_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
-command_server_startup_join: "Starting server %s... Please wait you will be connected after it start."
-command_server_startup_join_warning: "We could not connect you automatically to the server %s."
-command_server_stop: "Stopping server %s..."
-command_failed_start: "Failed to start server %s"
-command_failed_stop: "Failed to stop server %s"
+
+server_start: "Starting the suspended server %s... Please wait a while and then reconnect."
+server_start_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
+server_startup_join: "Starting server %s... Please wait you will be connected after it start."
+server_startup_join_warning: "We could not connect you automatically to the server %s."
+server_stop: "Stopping server %s..."
+server_failed_start: "Failed to start server %s"
+server_failed_stop: "Failed to stop server %s"
