--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,7 +8,7 @@
 version: 1
 
 # Language
-# Supported languages: en, ja, fr
+# Supported languages: en, ja, fr, ro
 # You can add your own language file in the plugins/BungeePteroPower directory.
 language: en
 
