Implement requested change: Configurable joinDelay

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -28,6 +28,11 @@ startupJoin:
   # If you set it to 0, the plugin will not try to connect the player to the server
   timeout: 60
 
+  # Once the server is pingable, wait the specified amount of seconds before sending the player to the server
+  # This is useful to wait for plugins like Luckperms to fully load
+  # If you set it to 0, the player will be connected as soon as the server is pingable
+  joinDelay: 5
+
   # The number of seconds between pings to check the server status
   pingInterval: 3
 
