Fix problem with /ptero stop not sending messages

--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -14,10 +14,10 @@ command_config_reloaded: "Configuration reloaded."
 command_server_not_configured: "Server %s is not configured."
 
 server_start: "Starting the suspended server %s... Please wait a while and then reconnect."
+server_start_failed: "Failed to start server %s"
 server_start_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
-server_startup_join: "Starting server %s... Please wait you will be connected after it start."
-server_startup_join_warning: "We could not connect you automatically to the server %s."
+server_startup_join: "Starting the suspended server %s... Please wait you will be connected after it start."
+server_startup_join_failed: "We could not connect you automatically to the server %s."
 server_stop: "Stopping server %s..."
+server_stop_failed: "Failed to stop server %s"
 server_stop_warning: "You are the last player on server %s. The server will be stopped in %s seconds to reduce server resources."
-server_failed_start: "Failed to start server %s"
-server_failed_stop: "Failed to stop server %s"
