--- a/src/main/resources/messages_ro.yml
+++ b/src/main/resources/messages_ro.yml
@@ -14,10 +14,10 @@ command_config_reloaded: "Configurația a fost reîncărcată."
 command_server_not_configured: "Serverul %s nu este configurat."
 
 server_start: "Se pornește serverul suspendat %s... Vă rugăm să așteptați un moment și să vă reconectați."
+server_start_failed: "Nu s-a reușit pornirea serverului %s"
 server_start_warning: "Dacă serverul %s este lăsat nesupravegheat fără niciun jucător care să se alăture, acesta va fi oprit din nou în %s secunde pentru a reduce resursele serverului."
-server_startup_join: "Lansarea serverului '%s'... Vă rugăm să așteptați, deoarece veți fi conectat după pornire."
+server_startup_join: "Se pornește serverul suspendat '%s'... Vă rugăm să așteptați, deoarece veți fi conectat după pornire."
 server_startup_join_warning: "Nu s-a putut conecta automat la serverul '%s'."
 server_stop: "Se oprește serverul %s..."
+server_stop_failed: "Nu s-a reușit oprirea serverului %s"
 server_stop_warning: "Ești ultimul jucător pe serverul %s. Serverul va fi oprit în %s secunde pentru a reduce resursele."
-server_failed_start: "Nu s-a reușit pornirea serverului %s"
-server_failed_stop: "Nu s-a reușit oprirea serverului %s"
