--- a/src/main/resources/messages_fr.yml
+++ b/src/main/resources/messages_fr.yml
@@ -14,10 +14,10 @@ command_config_reloaded: "Configuration reloaded."
 command_server_not_configured: "Le serveur %s n'est pas configuré."
 
 server_start: "Démarrage du serveur suspendu %s... Veuillez patienter un peu et vous reconnecter."
+server_start_failed: "Échec du démarrage du serveur %s"
 server_start_warning: "Si le serveur %s est laissé sans surveillance sans qu'aucun joueur ne le rejoigne, il sera à nouveau arrêté dans %s secondes pour réduire les ressources du serveur."
-server_startup_join: "Démarrage du serveur %s... Veuillez patienter jusqu'à ce que vous soyez connecté après le démarrage."
-server_startup_join_warning: "Nous n'avons pas pu vous connecter au serveur %s."
+server_startup_join: "Démarrage du serveur suspendu %s... Veuillez patienter jusqu'à ce que vous soyez connecté après le démarrage."
+server_startup_join_failed: "Nous n'avons pas pu vous connecter au serveur %s."
 server_stop: "Arrêt du serveur %s..."
+server_stop_failed: "Échec de l'arrêt du serveur %s"
 server_stop_warning: "Vous êtes le dernier joueur sur le serveur %s. Le serveur sera arrêté dans %s secondes pour réduire les ressources du serveur."
-server_failed_start: "Échec du démarrage du serveur %s"
-server_failed_stop: "Échec de l'arrêt du serveur %s"
