--- a/src/main/resources/messages_ja.yml
+++ b/src/main/resources/messages_ja.yml
@@ -14,10 +14,10 @@ command_config_reloaded: "設定が再読み込みされました。"
 command_server_not_configured: "サーバー「%s」は設定されていません。"
 
 server_start: "休止中のサーバー「%s」を起動中... しばらく待ってから入り直してください。"
+server_start_failed: "サーバー「%s」の起動に失敗しました"
 server_start_warning: "なお、起動したサーバー「%s」にプレイヤーが入らないまま放置されますと、サーバーリソース削減のため%s秒後に再度停止されますのでご注意ください。"
-server_startup_join: "サーバー 「%s」を開始しています... 起動後に接続されるのでお待ちください。"
-server_startup_join_warning: "サーバー 「%s」 に自動的に接続できませんでした。"
+server_startup_join: "休止中のサーバー 「%s」を開始しています... 起動後に接続されるのでお待ちください。"
+server_startup_join_failed: "サーバー 「%s」 に自動的に接続できませんでした。"
 server_stop: "サーバー「%s」を停止中..."
+server_stop_failed: "サーバー「%s」の停止に失敗しました"
 server_stop_warning: "あなたはサーバー「%s」の最後のプレイヤーです。サーバーリソース削減のため、%s秒後にサーバーを停止します。"
-server_failed_start: "サーバー「%s」の起動に失敗しました"
-server_failed_stop: "サーバー「%s」の停止に失敗しました"
