Add send messages when joining a server

--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -18,6 +18,8 @@ server_start_failed: "Failed to start server %s"
 server_start_warning: "If the server %s is left unattended without any players joining, it will be stopped again in %s seconds to reduce server resources."
 server_startup_join: "Starting the suspended server %s... Please wait you will be connected after it start."
 server_startup_join_failed: "We could not connect you automatically to the server %s."
+server_startup_join_move: "Server '%s' has started. Connecting..."
+server_startup_join_move_delayed: "Server '%s' has started. Connecting in %d seconds..."
 server_stop: "Stopping server %s..."
 server_stop_failed: "Failed to stop server %s"
 server_stop_warning: "You are the last player on server %s. The server will be stopped in %s seconds to reduce server resources."
