--- a/src/main/resources/messages_fr.yml
+++ b/src/main/resources/messages_fr.yml
@@ -18,6 +18,8 @@ server_start_failed: "Échec du démarrage du serveur %s"
 server_start_warning: "Si le serveur %s est laissé sans surveillance sans qu'aucun joueur ne le rejoigne, il sera à nouveau arrêté dans %s secondes pour réduire les ressources du serveur."
 server_startup_join: "Démarrage du serveur suspendu %s... Veuillez patienter jusqu'à ce que vous soyez connecté après le démarrage."
 server_startup_join_failed: "Nous n'avons pas pu vous connecter au serveur %s."
+server_startup_join_move: "Le serveur '%s' a démarré. Connexion en cours..."
+server_startup_join_move_delayed: "Le serveur '%s' a démarré. Connexion dans %d secondes..."
 server_stop: "Arrêt du serveur %s..."
 server_stop_failed: "Échec de l'arrêt du serveur %s"
 server_stop_warning: "Vous êtes le dernier joueur sur le serveur %s. Le serveur sera arrêté dans %s secondes pour réduire les ressources du serveur."
