--- a/src/main/resources/messages_ro.yml
+++ b/src/main/resources/messages_ro.yml
@@ -18,6 +18,8 @@ server_start_failed: "Nu s-a reușit pornirea serverului %s"
 server_start_warning: "Dacă serverul %s este lăsat nesupravegheat fără niciun jucător care să se alăture, acesta va fi oprit din nou în %s secunde pentru a reduce resursele serverului."
 server_startup_join: "Se pornește serverul suspendat '%s'... Vă rugăm să așteptați, deoarece veți fi conectat după pornire."
 server_startup_join_warning: "Nu s-a putut conecta automat la serverul '%s'."
+server_startup_join_move: "Serverul '%s' a pornit. Se conectează..."
+server_startup_join_move_delayed: "Serverul '%s' a pornit. Se conectează în %d secunde..."
 server_stop: "Se oprește serverul %s..."
 server_stop_failed: "Nu s-a reușit oprirea serverului %s"
 server_stop_warning: "Ești ultimul jucător pe serverul %s. Serverul va fi oprit în %s secunde pentru a reduce resursele."
