--- a/src/main/resources/messages_ja.yml
+++ b/src/main/resources/messages_ja.yml
@@ -1,5 +1,8 @@
 prefix: "[Ptero] "
 
+update_available: "アップデートが利用可能です: BungeePteroPower v%s → v%s"
+update_available_tooltip: "クリックして v%2$s をダウンロード！"
+
 join_autostart_title: "サーバーを起動中..."
 join_autostart_subtitle: "しばらく待ってから再接続してください。"
 join_start: "サーバー「%s」はサーバーリソースを節約するために休止中ですが、下のボタンをクリックすると起動できます。"
