--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -5,6 +5,7 @@ update_available_tooltip: "Click to download v%2$s!"
 
 join_autostart_title: "Starting server..."
 join_autostart_subtitle: "Please wait a moment and try reconnecting."
+join_autostart_login: "Starting server…\n\nServer %s is currently in hibernation mode to conserve server resources.\nIt is now being started, so please wait a moment and then reconnect."
 join_start: "The server %s is suspended to reduce server resources, but it can be started by clicking the button below."
 join_start_button: "[Start Server %s]"
 join_start_button_tooltip: "Click to start the server %s!"
