--- a/src/main/resources/messages_fr.yml
+++ b/src/main/resources/messages_fr.yml
@@ -5,6 +5,7 @@ update_available_tooltip: "Cliquez pour télécharger v%2$s!"
 
 join_autostart_title: "Démarrage du serveur..."
 join_autostart_subtitle: "Veuillez patienter un moment et essayer de vous reconnecter."
+join_autostart_login: "Démarrage du serveur en cours...\n\nLe serveur %s est actuellement en mode veille pour économiser des ressources.\nVeuillez attendre un moment avant de vous reconnecter."
 join_start: "Le serveur %s est suspendu pour réduire les ressources du serveur, mais il peut être démarré en cliquant sur le bouton ci-dessous."
 join_start_button: "[Démarrer le serveur %s]"
 join_start_button_tooltip: "Cliquez pour démarrer le serveur %s !"
