feat: add server starting status messages

--- a/src/main/resources/messages_fr.yml
+++ b/src/main/resources/messages_fr.yml
@@ -6,7 +6,11 @@ update_available_tooltip: "Cliquez pour télécharger v%2$s!"
 join_autostart_title: "Démarrage du serveur..."
 join_autostart_subtitle: "Veuillez patienter un moment et essayer de vous reconnecter."
 join_autostart_login: "Démarrage du serveur en cours...\n\nLe serveur %s est actuellement en mode veille pour économiser des ressources.\nVeuillez attendre un moment avant de vous reconnecter."
+join_autostart_starting_title: "Le serveur est en cours de démarrage..."
+join_autostart_starting_subtitle: "Veuillez patienter un moment et essayer de vous reconnecter."
+join_autostart_starting_login: "Le serveur %s est actuellement en cours de démarrage.\nVeuillez patienter un moment avant de vous reconnecter."
 join_start: "Le serveur %s est suspendu pour réduire les ressources du serveur, mais il peut être démarré en cliquant sur le bouton ci-dessous."
+join_start_starting: "Le serveur %s est actuellement en cours de démarrage. Veuillez patienter un moment avant de vous reconnecter."
 join_start_button: "[Démarrer le serveur %s]"
 join_start_button_tooltip: "Cliquez pour démarrer le serveur %s !"
 
